--- a/ServletPractice/src/main/webapp/index.html
+++ b/ServletPractice/src/main/webapp/index.html
@@ -12,5 +12,9 @@
 		<a href="enumeration.html">3. Enumeration Example</a><br>
 		<a href="session.html">4. Session Example</a><br>
 		<a href="cookies.html">5. Cookies Example</a><br>
+		
+		<br><br>
+		<h2>JSP Programs</h2>
+		<a href="jsp_demo.html">1. JSP Demo</a>
 	</body>
 </html>
